# custom-hashing

./: Cargo.toml  README.md
src/: lib.rs
src/benchmarks/: benchmark.rs
src/core/: custom_hash1.rs  custom_hash2.rs  mod.rs
src/tests/: hash_tests.rs
src/utils/: bitwise_operations.rs  mod.rs  padding.rs
